--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="container">
 			<div>Eric Tao</div>
 			<div>December 2023</div>
-			<div>github.io</div>
+			<div>github.iooooooo</div>
 		</div>
 	</body>
 </html>
