--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
 <html>
-	<h1> Heading level 1 </h1>
-	<h2> Heading level 2 </h2>
-	<p> A paragraph of text </p>
-	<!-- a comment that does not get written into your web page -->
-	<img /> <!-- an image -->
-	<ul> <!-- an unordered list with bullet points -->
-    		<li> list item 1 </li>
-    		<li> list item 2 </li>
-	</ul>  
-	<strong> **Important content that is bolded** </strong>
-	<em> *Emphasized content that is italicized* </em>
-	<div> A division or section of content </div>
+	<h1> CHUNGUS </h1>
 </html>
