name, picture, list, colors

--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
 <html>
-	<h1> CHUNGUS </h1>
+	<head>
+		<title>Eric's Website</title>
+		<meta charset="utr-8">
+		<link rel="stylesheet" href="style.css">
+
+	</head>
+	<body>
+		<h1>Eric Tao</h1>
+		<img src="images/profile.jpeg" alt="Eric Tao Profile Picture in Washington">
+		<div>
+			<p>This is my website!</p>
+			<a href="https://www.linkedin.com/in/eric-tao1/" target="_blank">
+				Linkedin
+			</a>
+
+			<h2>Eric's favorite foods!</h2>
+			<ul>
+				<li>Sushi</li>
+				<li>Dumplings</li>
+				<li>Creme Brulee</li>
+			</ul>
+		</div>
+	</body>
 </html>
