added links, icons, more colors, borders

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 	</head>
 	<body>
 		<h1>Eric Tao</h1>
-		<img src="images/profile.jpeg" alt="Eric Tao Profile Picture in Washington">
+		<img src="images/profile picture.jpeg" alt="Eric Tao Profile Picture in Washington" id="profile_picture">
 		<div>
 			<p>This is my website!</p>
-			<a href="https://www.linkedin.com/in/eric-tao1/" target="_blank">
-				Linkedin
-			</a>
-
+			<a href="mailto:estao@uci.edu">
+				<b>Send me an email</b></a>
 			<h2>Eric's favorite foods!</h2>
 			<ul>
 				<li>Sushi</li>
@@ -21,5 +19,11 @@
 				<li>Creme Brulee</li>
 			</ul>
 		</div>
+		<a href="https://github.com/estao1" target="_blank">
+			<img src="images/github.png" alt="Github Image Link" class="social-icon">
+		</a>
+		<a href="https://www.linkedin.com/in/eric-tao1/" target="_blank">
+			<img src="images/linkedin.png" alt="Github Image Link" class="social-icon">
+		</a>
 	</body>
 </html>
