--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
 		<a href="https://www.linkedin.com/in/eric-tao1/" target="_blank">
 			<img src="images/linkedin.png" alt="Github Image Link" class="social-icon">
 		</a>
+		<div class="container">
+			<div>Item 1</div>
+			<div>Item 2</div>
+			<div>Item 3</div>
+		</div>
 	</body>
 </html>
