fixed bottom flexbox

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			<img src="images/linkedin.png" alt="Github Image Link" class="social-icon">
 		</a>
 		<div class="container">
-			<div>Item 1</div>
-			<div>Item 2</div>
-			<div>Item 3</div>
+			<div>Eric Tao</div>
+			<div>December 2023</div>
+			<div>github.io</div>
 		</div>
 	</body>
 </html>
