--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <title>Eric Tao</title>
         <script type="text/javascript">
             const redirects = {
-                "resume": "Eric%20Tao%20-%20Resume.pdf"
+                "resume": "Eric_Tao_resume.pdf"
             }
 
             const path = window.location.pathname.substring(1).toLowerCase();
